--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     <!-- Resource hints for better performance -->
     <link rel="prefetch" href="/src/assets/video.mp4">
-        <link rel="prefetch" href="/src/assets/virtual-property-tour.mp4">
+        <link rel="prefetch" href="/virtual-property-tour.mp4">
 
     
     <!-- Critical CSS inline -->
